--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <div id="productos" class="product-container hidden"></div>
     </main>
 </body>
-<script type="module" src="/src/js/app.js"></script>
+<script type="module" src="/src/ts/app.ts"></script>
 
 </html>
