feat: fundamentos de react, implemetacion de custom-fetch

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>BC56-FRONTEND-REACT-NTT</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="/src/style/navbar.css" />
     <link rel="stylesheet" type="text/css" href="/src/style/products.css" />
-    <link rel="stylesheet" type="text/css" href="/src/style/footer.css" />
+    <link rel="stylesheet" type="text/css" href="/src/style/footer.css" /> -->
 <body>
 
-    <nav class="nav-container">
+    <!-- <nav class="nav-container">
         <div class="nav-div">
             <img class="navbar-image" src="/images/logo.avif" alt="logo" width="75" height="75">
             <h2 class="">NTT market</h2>
@@ -50,8 +51,10 @@
             <p>@2024 NNT Market. Todos los derechos reservados.</p>
             <p>Politica de Privacidad | Termnis de uso | Contacto</p>
         </div>
-    </footer>
+    </footer> -->
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
-<script type="module" src="/src/ts/app.ts"></script>
+<!-- <script type="module" src="/src/ts/app.ts"></script> -->
 
 </html>
